[package]
name = "time_locked_wallet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "time_locked_wallet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []

[dependencies]
anchor-lang = { version = "=0.27", features = ["init-if-needed"] }
solana-program = "=1.18"

[dev-dependencies]
solana-program-test = "=1.18"
solana-sdk = "=1.18"
